2008-11-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* Using QT4 stylesheet to improve layout of TCP Service, UDP
	Service and group object dialogs when program is used with KDE
	theme Oxygen.

2008-11-23  Vadim Kurland  <vadim@vk.crocodile.org>

	* Help.cpp, StartTipDialog.cpp: the GUI will use English help
	files for online help (where available) and "start tip" dialog if
	it is started in the non-enligsh locale and help file for this
	locale inot available. This is better than to show an empty
	dialog.

2008-11-22  vadim  <vadim@vk.crocodile.org>

	* StartTipDialog.cpp (StartTipDialog::StartTipDialog): Added
	"start tip" dialog that shows brief information on the online
	resources available to the user (web site URL, links to the
	Firewall Builder FAQ, HOWTOs, Cook Book). Linked pages open in the
	standard browser.

	* FWWindow.cpp: added menu item Help/Firewall Builder Help that
	opens a page with information about online resources for Firewall
	Builder (the same page that is shown in the "start tip" dialog).

	* ipf.cpp (main): fixed bug #2328330: "basic_string::erase error
	in fwb_ipf". Compiler for ipfilter aborted processing with error
	"basic_string::erase" when compilation was launched from the GUI.

2008-11-21  vadim  <vadim@vk.crocodile.org>

	* Improved Mac OS X bundle: included qt.conf file to make it look
	only inside the bundle for QT libraries and plugins, this
	eliminated warnings about QT libraries being loaded from two
	places if the system where fwbuilder GUI was running had QT
	installed on it. Now packaging QT accessibility plugin library,
	this should make the GUI run with acessibility features if
	accessibility aids are turned on system-wide.

2008-11-20  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printLogPrefix): fixed
	bug #2318639: "bug in logging (rule number)". Added logging prefix
	macro %R that gets expanded to the ruleset name. This can be
	useful in logging prefixes for rules in branch rulesets.
