@@ -97,21 +97,21 @@
          </property>
         </spacer>
        </item>
-       <item row="4" column="1" >
+       <item row="6" column="1" >
         <widget class="QCheckBox" name="ipf_nat_raudio_proxy" >
          <property name="text" >
           <string>Use raudio proxy in NAT rules</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1" >
+       <item row="7" column="1" >
         <widget class="QCheckBox" name="ipf_nat_h323_proxy" >
          <property name="text" >
           <string>Use h323 proxy in NAT rules</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1" >
+       <item row="8" column="1" >
         <widget class="QCheckBox" name="ipf_nat_ipsec_proxy" >
          <property name="text" >
           <string>Use ipsec proxy in NAT rules</string>
@@ -148,7 +148,21 @@
          </property>
         </widget>
        </item>
-       <item row="9" column="1" >
+       <item row="4" column="1" >
+        <widget class="QCheckBox" name="ipf_nat_krcmd_proxy" >
+         <property name="text" >
+          <string>Use Kerberos rcmd proxy in NAT rules</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1" >
+        <widget class="QCheckBox" name="ipf_nat_ekshell_proxy" >
+         <property name="text" >
+          <string>Use Kerberos ekshell proxy in NAT rules</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="1" >
         <spacer>
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -164,14 +178,14 @@
          </property>
         </spacer>
        </item>
-       <item row="7" column="1" >
+       <item row="9" column="1" >
         <widget class="QCheckBox" name="ipf_nat_pptp_proxy" >
          <property name="text" >
           <string>Use PPTP proxy in NAT rules</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1" >
+       <item row="10" column="1" >
         <widget class="QCheckBox" name="ipf_nat_irc_proxy" >
          <property name="text" >
           <string>Use IRC proxy in NAT rules for DCC</string>
